changed to latest as default devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "base-development-image",
-    "image": "ghcr.io/general-sandwalker/basedevelopmentimage:ubuntu-25.04",
+    "image": "ghcr.io/general-sandwalker/basedevelopmentimage:latest",
     "workspaceFolder": "/workspaces/",
     "remoteUser": "root",
     "mounts": [
