--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,17 +3,15 @@
     "image": "ghcr.io/general-sandwalker/basedevelopmentimage:latest",
     "workspaceFolder": "/workspaces/",
     "remoteUser": "root",
-    "mounts": [
-      "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+    "runArgs": [
+      "--network=host"
     ],
-    "postStartCommand": "apt install -y docker", //for alpine use "apk add --no-cache docker-cli"
     "customizations": {
       "vscode": {
         "settings": {
           "terminal.integrated.defaultProfile.linux": "zsh"
         },
         "extensions": [
-          "Codeium.codeium",
           "redhat.vscode-xml",
           "redhat.vscode-yaml",
           "bradlc.vscode-tailwindcss",
