--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,10 @@
     "name": "base-development-image",
     "image": "ghcr.io/general-sandwalker/basedevelopmentimage:latest",
     "workspaceFolder": "/workspaces/",
+    "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces,type=bind,consistency=cached",
+    "mounts": [
+      "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+    ],
     "remoteUser": "root",
     "runArgs": [
       "--network=host"
