update devcontainer.json to include additional mounts and environment variables

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,14 @@
     "workspaceFolder": "/workspaces/",
     "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces,type=bind,consistency=cached",
     "mounts": [
-      "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+      "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
+      "source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind",
+      "source=/tmp/.docker.xauth,target=/tmp/.docker.xauth,type=bind"  //touch /tmp/.docker.xauth && xauth nlist "$DISPLAY" | sed -e 's/^..../ffff/' | xauth -f /tmp/.docker.xauth nmerge -
     ],
-    "remoteUser": "root",
     "runArgs": [
-      "--network=host"
+      "--network=host",
+      "-e", "DISPLAY",
+      "-e", "XAUTHORITY=/tmp/.docker.xauth"
     ],
     "customizations": {
       "vscode": {
@@ -16,45 +19,43 @@
           "terminal.integrated.defaultProfile.linux": "zsh"
         },
         "extensions": [
-          "redhat.vscode-xml",
-          "redhat.vscode-yaml",
-          "bradlc.vscode-tailwindcss",
-          "dustypomerleau.rust-syntax",
-          "ms-vscode.remote-explorer",
-          "ms-vscode-remote.remote-ssh-edit",
-          "ms-vscode-remote.remote-ssh",
-          "christian-kohler.path-intellisense",
-          "cweijan.vscode-office",
-          "s3gf4ult.monokai-vibrant",
-          "ms-vscode-remote.remote-containers",
-          "cweijan.vscode-database-client2",
-          "cweijan.dbclient-jdbc",
-          "fill-labs.dependi",
-          "vadimcn.vscode-lldb",
-          "mikestead.dotenv",
-          "ms-azuretools.vscode-docker",
-          "ArthurLobo.easy-codesnap",
-          "janisdd.vscode-edit-csv",
-          "dsznajder.es7-react-js-snippets",
-          "tamasfe.even-better-toml",
-          "GrapeCity.gc-excelviewer",
-          "RichardLuo.frosted-glass-theme",
-          "ecmel.vscode-html-css",
-          "kisstkondoros.vscode-gutter-preview",
-          "xabikos.JavaScriptSnippets",
-          "ms-vscode.vscode-typescript-next",
-          "10F.laetus",
-          "yandeu.five-server",
-          "PKief.material-icon-theme",
-          "OliverCederborg.modern-monokai",
-          "larscom.monokai-dark-vibrant",
-          "GitHub.copilot",
-          "GitHub.copilot-chat",
-          "akamud.vscode-theme-onedark",
-          "formulahendry.auto-close-tag",
-          "jeff-hykin.better-dockerfile-syntax",
-          "ms-python.python",
-          "076923.python-image-preview"
+            "redhat.vscode-xml",
+            "redhat.vscode-yaml",
+            "bradlc.vscode-tailwindcss",
+            "dustypomerleau.rust-syntax",
+            "ms-vscode.remote-explorer",
+            "ms-vscode-remote.remote-ssh-edit",
+            "ms-vscode-remote.remote-ssh",
+            "christian-kohler.path-intellisense",
+            "s3gf4ult.monokai-vibrant",
+            "ms-vscode-remote.remote-containers",
+            "fill-labs.dependi",
+            "vadimcn.vscode-lldb",
+            "mikestead.dotenv",
+            "ms-azuretools.vscode-docker",
+            "ArthurLobo.easy-codesnap",
+            "janisdd.vscode-edit-csv",
+            "dsznajder.es7-react-js-snippets",
+            "tamasfe.even-better-toml",
+            "GrapeCity.gc-excelviewer",
+            "RichardLuo.frosted-glass-theme",
+            "ecmel.vscode-html-css",
+            "kisstkondoros.vscode-gutter-preview",
+            "xabikos.JavaScriptSnippets",
+            "ms-vscode.vscode-typescript-next",
+            "10F.laetus",
+            "yandeu.five-server",
+            "PKief.material-icon-theme",
+            "OliverCederborg.modern-monokai",
+            "larscom.monokai-dark-vibrant",
+            "GitHub.copilot",
+            "GitHub.copilot-chat",
+            "akamud.vscode-theme-onedark",
+            "formulahendry.auto-close-tag",
+            "jeff-hykin.better-dockerfile-syntax",
+            "mhutchie.git-graph",
+            "donjayamanne.githistory",
+            "bierner.markdown-mermaid"
         ]
       }
     }
